--- a/deployment/samconfig.toml
+++ b/deployment/samconfig.toml
@@ -9,5 +9,5 @@ region = "eu-west-1"
 profile = "personal"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "TelegramApiKey=\"\" GBApiKey=\"\""
+parameter_overrides = "TelegramApiKey=\"\" GBApiKey=\"\" BucketName=\"wev-observer-bucket\""
 image_repositories = []
