--- a/deployment/samconfig.toml
+++ b/deployment/samconfig.toml
@@ -9,5 +9,5 @@ region = "eu-west-1"
 profile = "personal"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "TelegramApiKey=\"\" GBApiKey=\"\" BucketName=\"web-observer-bucket\""
+parameter_overrides = "TelegramApiKey=\"6131252533:AAHvPEEVYuQ_pIcJrr0zaBnBfgsE3EXuTTc\" BucketName=\"web-observer-bucket\" DynamoTableName=\"ObserverTraces\""
 image_repositories = []
