--- a/deployment/observer.yml
+++ b/deployment/observer.yml
@@ -15,7 +15,7 @@ Parameters:
     Default: ObserverTraces
   FlowDynamoTableName:
     Type: String
-    Default: BotFlow
+    Default: ObserverBotFlow
   
 
 ##########################################################################
