--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,9 +5,12 @@ name: Go
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - "master"
+      - "feature/*"
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - "master"
 
 jobs:
 
