--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,5 +26,9 @@ jobs:
     - name: Build
       run: make build
 
-    - name: Test
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Unit Tests
       run: make test
