--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,11 +12,10 @@ on:
       - "master"
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
@@ -26,11 +25,20 @@ jobs:
     - name: Build
       run: make build
 
+    - name: Persist checkout
+      uses: actions/upload-artifact@v4
+      with:
+        name: checked-out-code
+        path: .
+
   test:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Restore checkout
+        uses: actions/download-artifact@v4
+        with:
+          name: checked-out-code
 
     - name: Unit Tests
       run: make test
