--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,11 @@ on:
   push:
     branches:
       - "master"
+      - "feature/*"
+      - "feat/*"
+      - "bugfix/*"
+      - "hotfix/*"
+      - "fix/*"
   pull_request:
     branches:
       - "master"
