--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,6 +15,7 @@ on:
   pull_request:
     branches:
       - "master"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -47,3 +48,16 @@ jobs:
 
     - name: Unit Tests
       run: make test
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'push' && github.ref == 'refs/heads/master'
+    steps:
+    - name: Restore checkout
+      uses: actions/download-artifact@v4
+      with:
+        name: checked-out-code
+
+    - name: Deploy
+      run: make deploy
