--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,14 +4,6 @@
 name: CD
 
 on:
-  push:
-    branches:
-      - "master"
-      - "feature/*"
-      - "feat/*"
-      - "bugfix/*"
-      - "hotfix/*"
-      - "fix/*"
   workflow_dispatch:
 
 jobs:
@@ -25,5 +17,5 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
+    - name: Deploy
       run: make build
