--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  Deploy to Development:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -17,5 +17,8 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Deploy
+    - name: Build
       run: make build
+
+    - name: Deploy
+      run: make deploy
