--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Deploy to Development:
+  Deploy-to-Development:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
