--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,4 +21,4 @@ jobs:
       run: make build
 
     - name: Deploy
-      run: make deploy
+      run: sam deploy --no-fail-on-empty-changeset --no-confirm-changeset  --capabilities CAPABILITY_NAMED_IAM --region eu-west-1 --stack-name web-observer-test --template-file ./deployment/observer.yml
