--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,8 +17,11 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: SAM
+      run: sam --version
+
     - name: Build
       run: make build
 
     - name: Deploy
-      run: sam deploy --no-fail-on-empty-changeset --no-confirm-changeset  --capabilities CAPABILITY_NAMED_IAM --region eu-west-1 --stack-name web-observer-test --template-file ./deployment/observer.yml
+      run: sam deploy --no-fail-on-empty-changeset --no-confirm-changeset --capabilities CAPABILITY_NAMED_IAM --region eu-west-1 --stack-name web-observer-test --template-file ./deployment/observer.yml
