--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Deploy-to-Development:
+  Build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -22,6 +22,21 @@ jobs:
 
     - name: Build
       run: make build
+
+    - name: Persist artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: checked-out-code
+        path: .
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+    - name: Restore checkout
+      uses: actions/download-artifact@v4
+      with:
+        name: checked-out-code
 
     - name: Deploy
       run: sam deploy --no-confirm-changeset --capabilities CAPABILITY_IAM --region eu-west-1 --stack-name web-observer-dev --template-file ./deployment/observer.yml
