--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,5 +38,8 @@ jobs:
       with:
         name: checked-out-code
 
-    - name: Deploy
-      run: sam deploy --no-confirm-changeset --capabilities CAPABILITY_IAM --region eu-west-1 --stack-name web-observer-dev --template-file ./deployment/observer.yml
+    - name: Test Vars
+      run: echo $TELEGRAMAPIKEY
+
+    # - name: Deploy
+    #   run: sam deploy --no-confirm-changeset --capabilities CAPABILITY_NAMED_IAM --region eu-west-1 --stack-name web-observer-dev --s3-bucket aws-sam-observer-deployment --template-file ./deployment/observer.yml --parameter-overrides ParameterKey=TelegramApiKey,ParameterValue=$TELEGRAMAPIKEY
