--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
   Deploy:
     runs-on: ubuntu-latest
-    needs: Build
+    needs: DeploymentBuild
     steps:
     - name: Restore checkout
       uses: actions/download-artifact@v4
